Solve the z-index issue with tiles over menu

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ html, body{
 	background-image: url(../img/transparent.png);
 	height: 100%;
 	overflow: hidden;
+	position: relative;
 }
 #canvas{
 	height: 100%;
